Updating the clean_user_data method to convert columns country, country_code and company to dtype category

--- a/data_eda.ipynb
+++ b/data_eda.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -28,23 +28,22 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 15320 entries, 0 to 15319\n",
-      "Data columns (total 12 columns):\n",
+      "Int64Index: 15320 entries, 0 to 1249\n",
+      "Data columns (total 11 columns):\n",
       " #   Column         Non-Null Count  Dtype \n",
       "---  ------         --------------  ----- \n",
-      " 0   index          15320 non-null  int64 \n",
-      " 1   first_name     15320 non-null  object\n",
-      " 2   last_name      15320 non-null  object\n",
-      " 3   date_of_birth  15320 non-null  object\n",
-      " 4   company        15320 non-null  object\n",
-      " 5   email_address  15320 non-null  object\n",
-      " 6   address        15320 non-null  object\n",
-      " 7   country        15320 non-null  object\n",
-      " 8   country_code   15320 non-null  object\n",
-      " 9   phone_number   15320 non-null  object\n",
-      " 10  join_date      15320 non-null  object\n",
-      " 11  user_uuid      15320 non-null  object\n",
-      "dtypes: int64(1), object(11)\n",
+      " 0   first_name     15320 non-null  object\n",
+      " 1   last_name      15320 non-null  object\n",
+      " 2   date_of_birth  15320 non-null  object\n",
+      " 3   company        15320 non-null  object\n",
+      " 4   email_address  15320 non-null  object\n",
+      " 5   address        15320 non-null  object\n",
+      " 6   country        15320 non-null  object\n",
+      " 7   country_code   15320 non-null  object\n",
+      " 8   phone_number   15320 non-null  object\n",
+      " 9   join_date      15320 non-null  object\n",
+      " 10  user_uuid      15320 non-null  object\n",
+      "dtypes: object(11)\n",
       "memory usage: 1.4+ MB\n"
      ]
     },
@@ -69,7 +68,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>first_name</th>\n",
        "      <th>last_name</th>\n",
        "      <th>date_of_birth</th>\n",
@@ -82,11 +80,24 @@
        "      <th>join_date</th>\n",
        "      <th>user_uuid</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Sigfried</td>\n",
        "      <td>Noack</td>\n",
        "      <td>1990-09-30</td>\n",
@@ -101,7 +112,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Guy</td>\n",
        "      <td>Allen</td>\n",
        "      <td>1940-12-01</td>\n",
@@ -116,7 +126,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Harry</td>\n",
        "      <td>Lawrence</td>\n",
        "      <td>1995-08-02</td>\n",
@@ -131,7 +140,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Darren</td>\n",
        "      <td>Hussain</td>\n",
        "      <td>1972-09-23</td>\n",
@@ -146,7 +154,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Garry</td>\n",
        "      <td>Stone</td>\n",
        "      <td>1952-12-20</td>\n",
@@ -164,43 +171,48 @@
        "</div>"
       ],
       "text/plain": [
-       "   index first_name last_name date_of_birth                    company  \\\n",
-       "0      0   Sigfried     Noack    1990-09-30         Heydrich Junitz KG   \n",
-       "1      1        Guy     Allen    1940-12-01                    Fox Ltd   \n",
-       "2      2      Harry  Lawrence    1995-08-02  Johnson, Jones and Harris   \n",
-       "3      3     Darren   Hussain    1972-09-23                Wheeler LLC   \n",
-       "4      4      Garry     Stone    1952-12-20                 Warner Inc   \n",
+       "      first_name last_name date_of_birth                    company  \\\n",
+       "index                                                                 \n",
+       "0       Sigfried     Noack    1990-09-30         Heydrich Junitz KG   \n",
+       "1            Guy     Allen    1940-12-01                    Fox Ltd   \n",
+       "2          Harry  Lawrence    1995-08-02  Johnson, Jones and Harris   \n",
+       "3         Darren   Hussain    1972-09-23                Wheeler LLC   \n",
+       "4          Garry     Stone    1952-12-20                 Warner Inc   \n",
        "\n",
-       "                  email_address  \\\n",
-       "0             rudi79@winkler.de   \n",
-       "1  rhodesclifford@henderson.com   \n",
-       "2  glen98@bryant-marshall.co.uk   \n",
-       "3    daniellebryan@thompson.org   \n",
-       "4       billy14@long-warren.com   \n",
+       "                      email_address  \\\n",
+       "index                                 \n",
+       "0                 rudi79@winkler.de   \n",
+       "1      rhodesclifford@henderson.com   \n",
+       "2      glen98@bryant-marshall.co.uk   \n",
+       "3        daniellebryan@thompson.org   \n",
+       "4           billy14@long-warren.com   \n",
        "\n",
-       "                                             address         country  \\\n",
-       "0                       Zimmerstr. 1/0\\n59015 Gießen         Germany   \n",
-       "1  Studio 22a\\nLynne terrace\\nMcCarthymouth\\nTF0 9GH  United Kingdom   \n",
-       "2                 92 Ann drive\\nJoanborough\\nSK0 6LR  United Kingdom   \n",
-       "3             19 Robinson meadow\\nNew Tracy\\nW22 2QG  United Kingdom   \n",
-       "4              3 White pass\\nHunterborough\\nNN96 4UE  United Kingdom   \n",
+       "                                                 address         country  \\\n",
+       "index                                                                      \n",
+       "0                           Zimmerstr. 1/0\\n59015 Gießen         Germany   \n",
+       "1      Studio 22a\\nLynne terrace\\nMcCarthymouth\\nTF0 9GH  United Kingdom   \n",
+       "2                     92 Ann drive\\nJoanborough\\nSK0 6LR  United Kingdom   \n",
+       "3                 19 Robinson meadow\\nNew Tracy\\nW22 2QG  United Kingdom   \n",
+       "4                  3 White pass\\nHunterborough\\nNN96 4UE  United Kingdom   \n",
        "\n",
-       "  country_code       phone_number   join_date  \\\n",
-       "0           DE   +49(0) 047905356  2018-10-10   \n",
-       "1           GB    (0161) 496 0674  2001-12-20   \n",
-       "2           GB  +44(0)121 4960340  2016-12-16   \n",
-       "3           GB    (0306) 999 0871  2004-02-23   \n",
-       "4           GB      0121 496 0225  2006-09-01   \n",
+       "      country_code       phone_number   join_date  \\\n",
+       "index                                               \n",
+       "0               DE   +49(0) 047905356  2018-10-10   \n",
+       "1               GB    (0161) 496 0674  2001-12-20   \n",
+       "2               GB  +44(0)121 4960340  2016-12-16   \n",
+       "3               GB    (0306) 999 0871  2004-02-23   \n",
+       "4               GB      0121 496 0225  2006-09-01   \n",
        "\n",
-       "                              user_uuid  \n",
-       "0  93caf182-e4e9-4c6e-bebb-60a1a9dcf9b8  \n",
-       "1  8fe96c3a-d62d-4eb5-b313-cf12d9126a49  \n",
-       "2  fc461df4-b919-48b2-909e-55c95a03fe6b  \n",
-       "3  6104719f-ef14-4b09-bf04-fb0c4620acb0  \n",
-       "4  9523a6d3-b2dd-4670-a51a-36aebc89f579  "
+       "                                  user_uuid  \n",
+       "index                                        \n",
+       "0      93caf182-e4e9-4c6e-bebb-60a1a9dcf9b8  \n",
+       "1      8fe96c3a-d62d-4eb5-b313-cf12d9126a49  \n",
+       "2      fc461df4-b919-48b2-909e-55c95a03fe6b  \n",
+       "3      6104719f-ef14-4b09-bf04-fb0c4620acb0  \n",
+       "4      9523a6d3-b2dd-4670-a51a-36aebc89f579  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +253,7 @@
        "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +348,7 @@
        "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +529,7 @@
        "4      9523a6d3-b2dd-4670-a51a-36aebc89f579  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -541,6 +553,119 @@
    ],
    "source": [
     "print(df_testing.index.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      first_name last_name date_of_birth company email_address address  \\\n",
+      "index                                                                    \n",
+      "867         NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "1023        NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "1807        NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "2103        NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "2439        NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "6526        NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "2764        NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "4987        NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "5310        NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "6927        NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "7747        NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "10025       NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "10237       NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "11002       NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "11459       NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "11615       NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "11778       NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "11881       NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "12110       NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "12606       NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "13879       NULL      NULL          NULL    NULL          NULL    NULL   \n",
+      "\n",
+      "      country country_code phone_number join_date user_uuid  \n",
+      "index                                                        \n",
+      "867      NULL         NULL         NULL      NULL      NULL  \n",
+      "1023     NULL         NULL         NULL      NULL      NULL  \n",
+      "1807     NULL         NULL         NULL      NULL      NULL  \n",
+      "2103     NULL         NULL         NULL      NULL      NULL  \n",
+      "2439     NULL         NULL         NULL      NULL      NULL  \n",
+      "6526     NULL         NULL         NULL      NULL      NULL  \n",
+      "2764     NULL         NULL         NULL      NULL      NULL  \n",
+      "4987     NULL         NULL         NULL      NULL      NULL  \n",
+      "5310     NULL         NULL         NULL      NULL      NULL  \n",
+      "6927     NULL         NULL         NULL      NULL      NULL  \n",
+      "7747     NULL         NULL         NULL      NULL      NULL  \n",
+      "10025    NULL         NULL         NULL      NULL      NULL  \n",
+      "10237    NULL         NULL         NULL      NULL      NULL  \n",
+      "11002    NULL         NULL         NULL      NULL      NULL  \n",
+      "11459    NULL         NULL         NULL      NULL      NULL  \n",
+      "11615    NULL         NULL         NULL      NULL      NULL  \n",
+      "11778    NULL         NULL         NULL      NULL      NULL  \n",
+      "11881    NULL         NULL         NULL      NULL      NULL  \n",
+      "12110    NULL         NULL         NULL      NULL      NULL  \n",
+      "12606    NULL         NULL         NULL      NULL      NULL  \n",
+      "13879    NULL         NULL         NULL      NULL      NULL  \n"
+     ]
+    }
+   ],
+   "source": [
+    "null_info = df_testing[(df_testing['country']=='NULL')]\n",
+    "print(null_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "United Kingdom    9371\n",
+      "Germany           4708\n",
+      "United States     1205\n",
+      "Name: country, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_testing = df_testing.drop(null_info.index)\n",
+    "print(df_testing['country'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1958-02-02    6\n",
+      "1978-01-31    5\n",
+      "1956-07-16    5\n",
+      "1961-03-27    5\n",
+      "1951-01-09    5\n",
+      "             ..\n",
+      "1938-12-22    1\n",
+      "2005-03-28    1\n",
+      "1963-04-26    1\n",
+      "1964-07-13    1\n",
+      "1994-03-27    1\n",
+      "Name: date_of_birth, Length: 11344, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_testing['date_of_birth'].info)"
    ]
   },
   {
