Updating the clean_user_data to update the incorrectly types phone numbers in the dataframe

--- a/data_eda.ipynb
+++ b/data_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "4      9523a6d3-b2dd-4670-a51a-36aebc89f579  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "4      9523a6d3-b2dd-4670-a51a-36aebc89f579  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -642,30 +642,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1958-02-02    6\n",
-      "1978-01-31    5\n",
-      "1956-07-16    5\n",
-      "1961-03-27    5\n",
-      "1951-01-09    5\n",
-      "             ..\n",
-      "1938-12-22    1\n",
-      "2005-03-28    1\n",
-      "1963-04-26    1\n",
-      "1964-07-13    1\n",
-      "1994-03-27    1\n",
-      "Name: date_of_birth, Length: 11344, dtype: int64\n"
+      "<class 'pandas.core.series.Series'>\n",
+      "Int64Index: 15284 entries, 0 to 1249\n",
+      "Series name: country\n",
+      "Non-Null Count  Dtype   \n",
+      "--------------  -----   \n",
+      "15284 non-null  category\n",
+      "dtypes: category(1)\n",
+      "memory usage: 134.5 KB\n",
+      "None\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "Int64Index: 15284 entries, 0 to 1249\n",
+      "Series name: country_code\n",
+      "Non-Null Count  Dtype \n",
+      "--------------  ----- \n",
+      "15284 non-null  object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 238.8+ KB\n",
+      "None\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "Int64Index: 15284 entries, 0 to 1249\n",
+      "Series name: company\n",
+      "Non-Null Count  Dtype \n",
+      "--------------  ----- \n",
+      "15284 non-null  object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 238.8+ KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "print(df_testing['date_of_birth'].info)"
+    "print(df_testing['country'].info())\n",
+    "print(df_testing['country_code'].info())\n",
+    "print(df_testing['company'].info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "Int64Index: 15284 entries, 0 to 1249\n",
+      "Series name: country\n",
+      "Non-Null Count  Dtype   \n",
+      "--------------  -----   \n",
+      "15284 non-null  category\n",
+      "dtypes: category(1)\n",
+      "memory usage: 134.5 KB\n",
+      "None\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "Int64Index: 15284 entries, 0 to 1249\n",
+      "Series name: country_code\n",
+      "Non-Null Count  Dtype   \n",
+      "--------------  -----   \n",
+      "15284 non-null  category\n",
+      "dtypes: category(1)\n",
+      "memory usage: 134.5 KB\n",
+      "None\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "Int64Index: 15284 entries, 0 to 1249\n",
+      "Series name: company\n",
+      "Non-Null Count  Dtype   \n",
+      "--------------  -----   \n",
+      "15284 non-null  category\n",
+      "dtypes: category(1)\n",
+      "memory usage: 501.7 KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_testing['country'] = df_testing['country'].astype('category')\n",
+    "df_testing['country_code'] = df_testing['country_code'].astype('category')\n",
+    "df_testing['company'] = df_testing['company'].astype('category')\n",
+    "\n",
+    "print(df_testing['country'].info())\n",
+    "print(df_testing['country_code'].info())\n",
+    "print(df_testing['company'].info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count         15284\n",
+       "unique        12089\n",
+       "top       Smith Inc\n",
+       "freq             22\n",
+       "Name: company, dtype: object"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_testing['company'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "Int64Index: 15284 entries, 0 to 1249\n",
+      "Series name: date_of_birth\n",
+      "Non-Null Count  Dtype \n",
+      "--------------  ----- \n",
+      "15284 non-null  object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 238.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_testing['date_of_birth'].info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count          15284\n",
+       "unique         11344\n",
+       "top       1958-02-02\n",
+       "freq               6\n",
+       "Name: date_of_birth, dtype: object"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_testing['date_of_birth'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index\n",
+      "5            277-664-6389x8405\n",
+      "27          (987)576-3015x3130\n",
+      "35           723-654-4681x6799\n",
+      "38            872.200.3110x563\n",
+      "61          174-394-0081x22030\n",
+      "                 ...          \n",
+      "15240       237-753-6415x89234\n",
+      "15253    001-824-578-8658x6744\n",
+      "15289        191.040.0076x2520\n",
+      "773        +1-946-020-6951x300\n",
+      "12523     001-529-002-6940x260\n",
+      "Name: phone_number, Length: 695, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "phone_num_info = df_testing['phone_number'].str.contains('x')\n",
+    "phone_num_info2 = df_testing[phone_num_info]\n",
+    "phone_num_info2 = phone_num_info2['phone_number'].str.strip('x')\n",
+    "print(phone_num_info2['phone_number'])"
    ]
   },
   {
