Updating the clean_user_data method to ensure both date columns are in ISO format and cleaning of the user data is complete with this step

--- a/data_eda.ipynb
+++ b/data_eda.ipynb
@@ -808,34 +808,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_testing['phone_number'] = df_testing['phone_number'].str.replace('x','')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "index\n",
-      "5            277-664-6389x8405\n",
-      "27          (987)576-3015x3130\n",
-      "35           723-654-4681x6799\n",
-      "38            872.200.3110x563\n",
-      "61          174-394-0081x22030\n",
-      "                 ...          \n",
-      "15240       237-753-6415x89234\n",
-      "15253    001-824-578-8658x6744\n",
-      "15289        191.040.0076x2520\n",
-      "773        +1-946-020-6951x300\n",
-      "12523     001-529-002-6940x260\n",
-      "Name: phone_number, Length: 695, dtype: object\n"
+      "['1990-09-30' '1940-12-01' '1995-08-02' ... '1961-04-24' '1943-08-09'\n",
+      " '1994-03-27']\n"
      ]
     }
    ],
    "source": [
-    "phone_num_info = df_testing['phone_number'].str.contains('x')\n",
-    "phone_num_info2 = df_testing[phone_num_info]\n",
-    "phone_num_info2 = phone_num_info2['phone_number'].str.strip('x')\n",
-    "print(phone_num_info2['phone_number'])"
+    "print(df_testing['date_of_birth'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_testing['date_of_birth'] = pd.to_datetime(df_testing['date_of_birth'], format='%Y-%m-%d', errors='coerce')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_testing['join_date'] = pd.to_datetime(df_testing['join_date'], format='%Y-%m-%d', errors='coerce')\n"
    ]
   },
   {
